# tauri-rs-ts-ipc

./: .gitignore  Cargo.toml
backend/: client.ts  listener.ts  models.ts
src/: commands.rs  commons.rs  enums.rs  events.rs  lib.rs  main copy.rs  main.rs  structs.rs
