[package]
name = "tauri-rs-ts-ipc"
description = "Build dependency for automated generation of Rust bridges for TypeScript"
version = "0.1.0"
edition = "2024"
license = "GPLv2"

[dependencies]
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "extra-traits", "visit"] }


[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
