[package]
name = "tauri-rs-ts-ipc"
description = "Build dependency for automated generation of Rust bridges for TypeScript"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"


[dependencies]
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "extra-traits", "visit"] }


[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
